# QHYPixInsightLinuxDrivers

./: .gitignore  README.md
src/: CMakeLists.txt
src/qhy5_ii/: CMakeLists.txt  qhy5_ii.cpp  qhy5_ii.h
src/qhy5_ii_raw/: CMakeLists.txt  qhy5_ii_raw.cpp  qhy5_ii_raw.h
